--- a/UI/skd-ref-site/src/index.html
+++ b/UI/skd-ref-site/src/index.html
@@ -13,7 +13,7 @@
   </script>
 
   <meta charset="utf-8">
-  <title>SkdRefSite</title>
+  <title>SketchDaily Reference Site</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
