css mode support

--- a/UI/skd-ref-site/src/index.html
+++ b/UI/skd-ref-site/src/index.html
@@ -22,6 +22,8 @@
   <script src="https://cdn.auth0.com/js/auth0/9.5.1/auth0.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
+  <link id="light-css" rel="stylesheet" href="/assets/style-light.css" disabled>
+  <link id="dark-css" rel="stylesheet" href="/assets/style-dark.css">
 </head>
 
 <body>
