--- a/UI/skd-ref-site/src/index.html
+++ b/UI/skd-ref-site/src/index.html
@@ -2,15 +2,24 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B7SQMPL7HF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B7SQMPL7HF');
+</script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-40311949-2"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-40311949-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-40311949-2');
-  </script>
+  </script> -->
 
   <meta charset="utf-8">
   <title>SketchDaily Reference Site</title>
